--- a/index.html
+++ b/index.html
@@ -15,14 +15,27 @@
                     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M5.29289 5.29289C5.68342 4.90237 6.31658 4.90237 6.70711 5.29289L12 10.5858L17.2929 5.29289C17.6834 4.90237 18.3166 4.90237 18.7071 5.29289C19.0976 5.68342 19.0976 6.31658 18.7071 6.70711L13.4142 12L18.7071 17.2929C19.0976 17.6834 19.0976 18.3166 18.7071 18.7071C18.3166 19.0976 17.6834 19.0976 17.2929 18.7071L12 13.4142L6.70711 18.7071C6.31658 19.0976 5.68342 19.0976 5.29289 18.7071C4.90237 18.3166 4.90237 17.6834 5.29289 17.2929L10.5858 12L5.29289 6.70711C4.90237 6.31658 4.90237 5.68342 5.29289 5.29289Z" fill="#0F1729"></path> </g></svg>
                 </button>
                 <form method="dialog">
-                    <label>Title <input type="text" name="book-title" pattern="[A-Za-z].+" placeholder="Dance of ice and fire" required></label>
-                    <label>Author <input type="text" name="book-author" pattern="[A-Za-z].+" placeholder="abc" required></label>
-                    <label>Total Pages <input type="number" name="book-pages" placeholder="200" required></label>
-                    <label>Read<input type="checkbox" name="book-read"></label>
-                    <button>Add</button>
+                    <label>
+                        Title 
+                        <input type="text" name="book-title" pattern="[A-Za-z].+" placeholder="Harry potter" required>
+                    </label>
+                    <label>
+                        Author 
+                        <input type="text" name="book-author" pattern="[A-Za-z].+" placeholder="JK Rowling" required>
+                    </label>
+                    <label>
+                        Total Pages 
+                        <input type="text" name="book-pages" pattern="^(?!(0))[0-9]+$" m placeholder="1000" required>
+                    </label>
+                    <label id="toggleSwitch">
+                        Read
+                        <input type="checkbox" name="book-read">
+                        <span class="slider knob"></span>
+                    </label>
+                    <button>Submit</button>
                 </form>
             </dialog>
-            <button>Add</button>
+            <button>Add Book</button>
         </li>
     </ul>
     <script src="script.js"></script>
